Region1_Template/2.RDS_template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: RDS Template


Parameters:
  ExportStackName:
    Description: The name of the stack that exports the values VPC
    Type: String
  DBUsername:
    Description: DB Username
    Default: admin
    NoEcho: true
    Type: String
    MinLength: '1'
    MaxLength: '16'
  DBPassword:
    Description: DB Pwd
    NoEcho: true
    Type: String
    MinLength: '8'
    MaxLength: '41'

  DBInstanceIdentifier:
    Description: Instance Identifier name
    Type: String
    
Resources:

###########
# RDS 
###########


  RDSInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: DBName
      Engine: MySQL
      EngineVersion: 8.0.20
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      DBInstanceClass: db.t2.micro
      VPCSecurityGroups: 
        -  Fn::GetAtt: [ RDSsg, GroupId ]
      AllocatedStorage: 20
      AvailabilityZone: !Select 
        - 0
        - !GetAZs 
          Ref: AWS::Region
      StorageType: gp2
      DBInstanceIdentifier: !Ref DBInstanceIdentifier
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref RDSSubnetGroup

###########
# RDS Subnet Group
###########

  RDSSubnetGroup: 
    Type: "AWS::RDS::DBSubnetGroup"
    Properties: 
      DBSubnetGroupName: RDS Private Subnet Group
      DBSubnetGroupDescription: RDS Subnet Group
      SubnetIds: 
        - Fn::ImportValue: !Sub '${ExportStackName}-PrivateSubnet1'
        - Fn::ImportValue: !Sub '${ExportStackName}-PrivateSubnet2'
      Tags: 
        - 
          Key: Name
          Value: RDSSubnetGroup

###########
# RDS sg
###########

  RDSsg:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: RDSsg
      GroupDescription: Open Port 3306
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 
            Fn::ImportValue: !Sub '${ExportStackName}-PublicSubnet1Cidr'
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 
            Fn::ImportValue: !Sub '${ExportStackName}-PrivateSubnet1Cidr'
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 
            Fn::ImportValue: !Sub '${ExportStackName}-PrivateSubnet2Cidr'

      Tags:
        - 
          Key: Name
          Value: RDSsg
      VpcId:
        Fn::ImportValue: !Sub '${ExportStackName}-LabVPC'


Outputs:

  RDSEndPointAddress:
    Value: !GetAtt RDSInstance.Endpoint.Address
    Description: RDS EndPoint Address
    Export:
      Name: !Sub ${AWS::StackName}-RDSEndPointAddress
